--- a/PA-1/CVPR_Assignment_01.ipynb
+++ b/PA-1/CVPR_Assignment_01.ipynb
@@ -5,6 +5,14 @@
     "colab": {
       "name": "CVPR_Assignment_01(v2.0).ipynb",
       "provenance": [],
+      "collapsed_sections": [
+        "ihdHvgF8gsg_",
+        "s1sLC-I2jgLm",
+        "qXBvEHbIkr19",
+        "a1Ba09iSk3YX",
+        "e70MzSJmnFpk",
+        "MqlyNeHbnSrX"
+      ],
       "toc_visible": true
     },
     "kernelspec": {
@@ -54,7 +62,7 @@
         "\n",
         "%matplotlib inline"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -80,7 +88,7 @@
         "print(X_train.shape, Y_train.shape)\n",
         "print(X_test.shape, Y_test.shape)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -101,7 +109,7 @@
         "X_train = X_train.reshape(-1, 28,28,1).astype(\"float32\") / 255.0\n",
         "X_test = X_test.reshape(-1, 28,28,1).astype(\"float32\") / 255.0"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -134,7 +142,7 @@
         "])\n",
         "model_1.summary()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +191,7 @@
         "    metrics=['accuracy']\n",
         ")"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -198,7 +206,7 @@
       "source": [
         "h = model_1.fit(x=X_train, y=Y_train, epochs=5, batch_size=28, validation_split=0.2)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,7 +256,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -279,7 +287,7 @@
         "print('\\nTest Loss:', test_loss)\n",
         "print('\\nTest Accuracy:', test_acc)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -334,7 +342,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -382,7 +390,7 @@
         "print(X2_train.shape, Y2_train.shape)\n",
         "print(X2_test.shape, Y2_test.shape)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -402,7 +410,7 @@
       "source": [
         "X2_train, X2_test = X2_train.reshape(-1, 28,28,1), X2_test.reshape(-1, 28,28,1)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -435,7 +443,7 @@
         "])\n",
         "model_2.summary()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -484,7 +492,7 @@
         "    metrics=['accuracy']\n",
         ")"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -499,7 +507,7 @@
       "source": [
         "h2 = model_2.fit(x=X2_train, y=Y2_train, epochs=5, batch_size=28, validation_split=0.2)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -549,7 +557,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -580,7 +588,7 @@
         "print('\\nTest Loss:', test_loss)\n",
         "print('\\nTest Accuracy:', test_acc)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -635,7 +643,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -683,7 +691,7 @@
         "print(X3_train.shape, Y3_train.shape)\n",
         "print(X3_test.shape, Y3_test.shape)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -704,7 +712,7 @@
         "X3_train = X3_train.reshape(-1, 28,28,1).astype(\"float32\") / 255.0\n",
         "X3_test = X3_test.reshape(-1, 28,28,1).astype(\"float32\") / 255.0"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -737,7 +745,7 @@
         "])\n",
         "model_3.summary()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -786,7 +794,7 @@
         "    metrics=['accuracy']\n",
         ")"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -801,7 +809,7 @@
       "source": [
         "h3 = model_3.fit(x=X3_train, y=Y3_train, epochs=5, batch_size=28, validation_split=0.2)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -851,7 +859,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -882,7 +890,7 @@
         "print('\\nTest Loss:', test_loss)\n",
         "print('\\nTest Accuracy:', test_acc)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -937,7 +945,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -985,7 +993,7 @@
         "print(X4_train.shape, Y4_train.shape)\n",
         "print(X4_test.shape, Y4_test.shape)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1005,7 +1013,7 @@
       "source": [
         "X4_train, X4_test = X4_train.reshape(-1, 28,28,1), X4_test.reshape(-1, 28,28,1)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1038,7 +1046,7 @@
         "])\n",
         "model_4.summary()"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1087,7 +1095,7 @@
         "    metrics=['accuracy']\n",
         ")"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1102,7 +1110,7 @@
       "source": [
         "h4 = model_4.fit(x=X4_train, y=Y4_train, epochs=5, batch_size=28, validation_split=0.2)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1152,7 +1160,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1183,7 +1191,7 @@
         "print('\\nTest Loss:', test_loss)\n",
         "print('\\nTest Accuracy:', test_acc)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1238,7 +1246,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1286,7 +1294,7 @@
         "print(X5_train.shape, Y5_train.shape)\n",
         "print(X5_test.shape, Y5_test.shape)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1307,7 +1315,7 @@
         "X5_train = X5_train.reshape(-1, 28,28,1).astype(\"float32\") / 255.0\n",
         "X5_test = X5_test.reshape(-1, 28,28,1).astype(\"float32\") / 255.0"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1340,7 +1348,7 @@
         "])\n",
         "model_5.summary()"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1389,7 +1397,7 @@
         "    metrics=['accuracy']\n",
         ")"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1404,7 +1412,7 @@
       "source": [
         "h5 = model_5.fit(x=X5_train, y=Y5_train, epochs=5, batch_size=28, validation_split=0.2)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1454,7 +1462,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1485,7 +1493,7 @@
         "print('\\nTest Loss:', test_loss)\n",
         "print('\\nTest Accuracy:', test_acc)"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1540,7 +1548,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1595,7 +1603,7 @@
         "print(X6_train.shape, Y6_train.shape)\n",
         "print(X6_test.shape, Y6_test.shape)"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1615,7 +1623,7 @@
       "source": [
         "X6_train, X6_test = X6_train.reshape(-1, 28,28,1), X6_test.reshape(-1, 28,28,1)"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1648,7 +1656,7 @@
         "])\n",
         "model_6.summary()"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1697,7 +1705,7 @@
         "    metrics=['accuracy']\n",
         ")"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1712,7 +1720,7 @@
       "source": [
         "h6 = model_6.fit(x=X6_train, y=Y6_train, epochs=5, batch_size=28, validation_split=0.2)"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1762,7 +1770,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1793,7 +1801,7 @@
         "print('\\nTest Loss:', test_loss)\n",
         "print('\\nTest Accuracy:', test_acc)"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1848,7 +1856,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1878,6 +1886,28 @@
       },
       "source": [
         "Using `RMSProp` **without normaliztion** the data, I find the accuracy in validation data ***97.85%*** and error in validation data ***10.10%***. In test data the accuracy is ***97.94%***."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JOhklzpxD0mj"
+      },
+      "source": [
+        "# Conclusion\n",
+        "After completing the model using all the loss function in normalization and without normalization data, I find different type of accuracy.\n",
+        "\n",
+        "| Types of Data | Loss Function | Accuracy | Loss |\n",
+        "| :-: | :-: | :-: |:-:|\n",
+        "| Normalization | Adam | 98.69%| 3.86%|\n",
+        "| Normalization | SGD | 97.71%| 7.48%|\n",
+        "| Normalization | RMSProp| 98.86% | 3.93%|\n",
+        "|  Without Normalization | Adam | 98.36%| 5.84%|\n",
+        "|  Without Normalization | SGD | 97.64| 7.59%|\n",
+        "|  Without Normalization | RMSProp | 97.94% | 8.73%|\n",
+        "\n",
+        "Here we see that In normalize Data our model gives better accuracy. And Adam and RMSProp Loss is too low. But I think RMSProp gives us the best result in normalised data.  \n",
+        "\n"
       ]
     }
   ]
